k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-todo
spec:
  selector:
    app: go-todo
  ports:
    - port: 80
      targetPort: 8080
